--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,21 +1,27 @@
 /*
   Dropdown
 */
-.dropdown {
+.dropdown_wrapper {
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.hidden {
+    pointer-events: none;
+  }
+}
+
+.dropdown {
   width: 225px;
   border-radius: 8px;
   padding: 12px;
   background-color: var(--background1);
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   animation-duration: 0.225s !important;
-
-  &.hidden {
-    pointer-events: none;
-  }
 }
 
 .dropdown_action_wrapper {
@@ -49,6 +55,28 @@
     outline: none;
     background-color: rgba(83, 82, 237, 0.3);
   }
+}
+
+/*
+  Modal
+*/
+.modal_overlay {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 10000;
+  overflow-y: auto;
+  justify-content: center;
+  padding-top: 180px;
+}
+
+.modal {
+  height: fit-content;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 12px 24px;
 }
 
 /*
