--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -694,6 +694,83 @@
     }
 }
 
+.add_board_preview_wrapper {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 8px;
+}
+
+.add_board_preview {
+    width: 200px;
+    height: 120px;
+    background: none;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 3px;
+    box-shadow: 0 7px 15px rgb(0 0 0 / 15%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.225s ease;
+}
+
+.add_board_background_field {
+    margin-top: 1rem;
+}
+
+.board_background_option_list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.board_background_option_wrapper {
+    width: 40px;
+    height: 32px;
+}
+
+.board_background_option {
+    align-items: center;
+    border-radius: 3px;
+    border-style: none;
+    box-shadow: none;
+    color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    margin: 0;
+    min-height: 0;
+    outline: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    cursor: pointer;
+
+    &.active:after {
+        content: "\f00c";
+        font: var(--fa-font-regular);
+    }
+}
+
+.add_board_submit_btn {
+    margin: 32px auto 12px auto;
+    width: 100%;
+    padding: 12px 24px;
+    border-radius: 8px;
+    border-style: none;
+    background-color: rgba(83, 82, 237, 1);
+    color: white;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background 0.225s ease;
+
+    &:disabled,
+    &[disabled] {
+        cursor: default;
+        background: rgba(83, 82, 237, 0.5);
+    }
+}
+
 @media only screen and (max-width: 820px) {
     .board_btn_wrapper {
         width: calc(50% - 6px);
