--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -490,3 +490,229 @@
     border-bottom: none;
   }
 }
+
+
+/*
+
+
+
+
+
+
+
+
+
+
+
+
+*/
+hr {
+  border: none;
+  border-top: 2px solid #e9e9e9;
+}
+
+.text_button {
+  font-size: 1em;
+  border: none;
+  border-radius: 8px;
+  padding: 8px;
+  cursor: pointer;
+  transition: all 0.225s ease;
+}
+
+.icon_text_button {
+  transition: all 0.225s ease;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+  align-items: center;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  font-size: 0.9em;
+  border-radius: 8px;
+  width: 100%;
+
+  & p {
+      margin: 0;
+  }
+}
+
+textarea {
+  width: 240px;
+  font-size: 1em;
+  border: none;
+  border-radius: 8px;
+  resize: none;
+  padding: 8px;
+  height: 69px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  outline: none;
+  overflow: hidden;
+  transition: height 0.225s;
+}
+
+.dropdown-two {
+  z-index: 1000;
+  position: fixed;
+  width: 300px;
+  background: #fff;
+  padding: 8px;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  & header {
+      position: relative;
+      height: 30px;
+      padding: 0;
+
+      & .back_btn {
+          transition: all 0.225s ease;
+          position: absolute;
+          background: none;
+          border: none;
+          font-size: 1.2em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          top: 50%;
+          left: 0;
+          transform: translate(0, -50%);
+          cursor: pointer;
+          padding: 8px;
+          border-radius: 50%;
+
+          &:hover,
+          &:focus-visible {
+              outline: none;
+              background: #d2d2d2;
+          }
+      }
+
+      & .dropdown_title {
+          font-size: 1rem;
+          width: 100%;
+          margin: 0;
+          text-align: center;
+      }
+
+      & .close_btn {
+          transition: all 0.225s ease;
+          position: absolute;
+          background: none;
+          border: none;
+          font-size: 1.4em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          top: 50%;
+          right: 0;
+          transform: translate(0, -50%);
+          cursor: pointer;
+          padding: 6px;
+          border-radius: 50%;
+
+          & ion-icon {
+              transform: rotate(45deg);
+          }
+
+          &:hover,
+          &:focus-visible {
+              outline: none;
+              background: #d2d2d2;
+          }
+      }
+  }
+
+  & .actions_list {
+      & p {
+          margin: 0;
+          padding: 8px;
+          font-size: 0.9rem;
+          margin-bottom: 10px;
+
+          &.content_title {
+              padding: 0;
+              font-weight: 600;
+          }
+
+          &.no_color {
+              margin: 0;
+              font-weight: 500;
+              padding: 0;
+          }
+
+          &.no_color_description {
+              margin: 0;
+              padding: 0;
+          }
+      }
+
+      & input {
+          transition: all 0.225s ease;
+          width: calc(100% - 20px);
+          border: 2px solid #e9e9e9;
+          padding: 8px;
+          border-radius: 8px;
+          margin-bottom: 10px;
+          font-size: 0.9em;
+
+          &:focus-visible {
+              border: 2px solid lightblue;
+              outline: none;
+          }
+      }
+
+      & button:disabled,
+      & button[disabled] {
+          background: none;
+          cursor: default;
+
+          &:hover {
+              background: none;
+          }
+      }
+
+      & .text_button {
+          background: lightblue;
+          width: fit-content;
+
+          &:hover,
+          &:focus-visible {
+              outline: none;
+              background: #8ac7db;
+          }
+      }
+
+      .dropdown_btn {
+          transition: all 0.225s ease;
+          border: none;
+          border-radius: 8px;
+          font-size: 0.9rem;
+          cursor: pointer;
+          padding: 8px;
+          width: 100%;
+          text-align: left;
+          background: none;
+
+          &:hover,
+          &:focus-visible {
+              outline: none;
+              background: rgba(0, 0, 0, 0.12);
+          }
+
+          &.warning {
+              background: #ff5e57;
+              color: #fff;
+              text-align: center;
+
+              &:hover,
+              &:focus-visible {
+                  outline: none;
+                  background: #ff3f34;
+              }
+          }
+      }
+  }
+}
