--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -453,7 +453,7 @@
   display: inline-block;
   padding: 8px 40px 8px 15px;
   border-radius: 8px;
-  width: 220px;
+  width: 100%;
   border: 2px solid rgba(83, 82, 237, 0.3);
   background-color: rgba(83, 82, 237, 0.05);
   text-align: left;
