--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -94,6 +94,8 @@
     padding: 12px 0;
     border-bottom: 3px solid rgba(83, 82, 237, 1);
     margin-bottom: 16px;
+    background-color: #fff;
+    transition: background .225s ease;
 }
 
 .list_title {
