Added loading animation to pages

--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -484,8 +484,8 @@
   loading page
 */
 .loading_page_container {
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    inset: 0;
     display: flex;
     justify-content: center;
     align-items: center;
