Updated boardStore and cardModal

--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -390,6 +390,11 @@
     font-size: 0.9em;
 }
 
+.card_details_checklist_container {
+    width: 100%;
+    margin-bottom: 24px;
+}
+
 .card_detail_checklist_progress_wrapper {
     display: flex;
     align-items: center;
