--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -21,13 +21,6 @@
   animation-duration: 0.225s !important;
 }
 
-.dropdown_header {
-  position: relative;
-  padding: 0 16px 8px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.15);
-  margin-bottom: 12px;
-}
-
 .dropdown_header_btn {
   position: absolute;
   width: 30px;
@@ -134,6 +127,48 @@
     outline: none;
     background-color: rgba(83, 82, 237, 0.3);
   }
+}
+
+.dropdown_header {
+  position: relative;
+  width: 300px;
+  padding: 0 32px 8px;
+  border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+  margin-bottom: 8px;
+}
+
+.dropdown_header_title {
+  font-weight: 600;
+  font-size: 1em;
+  text-align: center;
+}
+
+.dropdown_close_btn {
+  position: absolute;
+  top: -4px;
+  right: 4px;
+  border-style: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2em;
+  background-color: transparent;
+  cursor: pointer;
+  transition: background 0.225s ease;
+
+  &:hover,
+  &:focus-within {
+    outline: none;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+}
+
+.dropdown_content {
+  padding: 0 8px;
 }
 
 /*
@@ -295,6 +330,10 @@
   margin-top: 1rem;
   margin-right: 8px;
   width: calc(50% - 8px);
+
+  &:first-child {
+    margin-top: 0;
+  }
 
   &:last-child {
     margin-left: 8px;
@@ -477,7 +516,7 @@
 }
 
 .custom_form_submit_btn {
-  margin: 32px auto auto;
+  margin: 20px auto auto;
   width: 100%;
   padding: 12px 24px;
   border-radius: 8px;
